left alignment fixed

--- a/src/Homepage/Homepage/Homepage.css
+++ b/src/Homepage/Homepage/Homepage.css
@@ -273,7 +273,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 50vh;
-  width: 95%;
+  width: 100%;
   background: #161623;
 }
 
